--- a/public/css/sweetAlert.css
+++ b/public/css/sweetAlert.css
@@ -43,6 +43,10 @@ div:where(.swal2-container).swal2-center > .swal2-popup {
   overflow: auto;
 }
 
+.delete-popup {
+  width: 500px !important;
+}
+
 div:where(.swal2-container).swal2-center > .swal2-popup .swal2-html-container {
   width: auto;
   display: flex !important;
