--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 
     <div class="go-top-btn-container">
         <button type="button" class="go-top-btn" aria-label="Ir al inicio de la página">
-            <i class="ri-arrow-up-line" aria-hidden="true"></i>
+            <img class="go-top-arrow" src="/images/go-top-arrow.png" width="35" height="35">
         </button>
     </div>
 </nav>
@@ -45,9 +45,6 @@
         </div>
     </div>
     <p id="empty-comment" class="empty-comment disabled">No se encontró ningun producto.</p>
-    <button type="button" class="go-top-btn" aria-label="Ir al inicio de la página">
-        <img class="cart-icon" src="/images/go-top-arrow.png" width="35" height="35">
-    </button>
     <div class="productContainer" id="productContainer">
         <!-- JS -->
     </div>
