--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,15 +10,11 @@
     <meta name="Luis Bossa" content="Elexir">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
-
-
-
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@300;400&display=swap"
         as="style" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3/src/toastify.min.css" media="print"
-        onload="this.media='all'">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" media="all">
 
     <link rel="stylesheet" href="/css/sweetAlert.css" media="all">
     <link rel="stylesheet" href="/css/cart.css" media="all">
@@ -96,8 +92,8 @@
 
             <%- body %>
 
+                <script src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
                 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
-                <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.9.3" defer></script>
 </body>
 
 </html>
