--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,9 @@
             <input type="text" class="input" placeholder="Buscar.." id="input" />
         </div>
     </div>
-    <p id="empty-comment" class="empty-comment disabled">No se encontró ningun producto.</p>
+    <div id="empty-div" class="empty-div disabled">
+        <p id="empty-comment" class="empty-comment">No se encontró ningun producto.</p>
+    </div>
     <div class="productContainer" id="productContainer">
         <!-- JS -->
     </div>
