--- a/public/css/index.css
+++ b/public/css/index.css
@@ -495,6 +495,41 @@ main {
   background: var(--clr-shine-blue);
 }
 
+.empty-div {
+  width: auto;
+  display: inline-block;
+  color: var(--clr-white);
+  border-radius: var(--b-radius-xs);
+  padding: var(--space-halfunit) var(--space-unit);
+  outline: 0;
+  border: 0;
+  white-space: nowrap;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  background-image: -moz-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -webkit-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: -ms-linear-gradient(
+      top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.35)
+    ),
+    url("/images/bg02.webp");
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)),
+    url("/images/bg02.webp");
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
+  background-color: var(--clr-blue);
+}
+
 .btn.btn-cart-empty {
   outline: 0;
   border: 0;
