--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@
 :root {
   --clr-aside: #3b3e56;
   --clr-black: #000;
-  --clr-red: #c0392b;
+  --clr-red: #a73737;
   --clr-orange: #ff9f51;
   --clr-green: #2a8851;
   --clr-mate: #232523;
